--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss": "^7.0.39",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-redux": "^8.0.7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
